--- a/src/index.html
+++ b/src/index.html
@@ -9,33 +9,42 @@
       name="description"
       content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para os cliente. Explore o mundo na sua velocidade com a bikecraft"
     />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
+    <!-- HEADER -->
     <header class="bg-black">
       <div
-        class="flex items-center justify-between gap-5 flex-wrap text-white p-5 lg:container mx-auto"
+        class="flex items-center justify-between gap-5 flex-wrap text-white p-5 max-w-7xl mx-auto"
       >
         <!-- adicionar href -->
         <a href=""><img src="./img/bikcraft.svg" alt="bikcraft" /></a>
-        <ul class="flex gap-4 sm:gap-5 lg:gap-10 flex-wrap">
+        <ul class="flex gap-4 sm:gap-5 lg:gap-10 flex-wrap font-poppins">
           <li class="group">
             <a
               href="./bicicletas.html"
-              class="py-1 inline-block text-lg px-3 py-2 sm:px-4 sm:py-3 lg:py-4 lg:px-0 bg-botao-fundo-preto hover:bg-botao-fundo-hover duration-150 lg:after:content-[''] lg:after:block lg:after:h-0.5 lg:after:w-0 lg:after:bg-white lg:group-hover:after:w-full lg:after:duration-300 lg:bg-inherit lg:hover:bg-inherit lg:relative lg:after:absolute"
+              class="py-1 inline-block text-lg px-3 py-2 sm:px-4 sm:py-3 lg:py-4 lg:px-0 bg-cor-c1 hover:bg-cor-c10 duration-150 lg:after:content-[''] lg:after:block lg:after:h-0.5 lg:after:w-0 lg:after:bg-white lg:group-hover:after:w-full lg:after:duration-300 lg:bg-inherit lg:hover:bg-inherit lg:relative lg:after:absolute"
               >bicicletas</a
             >
           </li>
           <li class="group">
             <a
               href="./seguros.html"
-              class="py-1 inline-block text-lg px-3 py-2 sm:px-4 sm:py-3 lg:py-4 lg:px-0 bg-botao-fundo-preto hover:bg-botao-fundo-hover duration-150 lg:after:content-[''] lg:after:block lg:after:h-0.5 lg:after:w-0 lg:after:bg-white lg:group-hover:after:w-full lg:after:duration-300 lg:bg-inherit lg:hover:bg-inherit lg:relative lg:after:absolute"
+              class="py-1 inline-block text-lg px-3 py-2 sm:px-4 sm:py-3 lg:py-4 lg:px-0 bg-cor-c1 hover:bg-cor-c10 duration-150 lg:after:content-[''] lg:after:block lg:after:h-0.5 lg:after:w-0 lg:after:bg-white lg:group-hover:after:w-full lg:after:duration-300 lg:bg-inherit lg:hover:bg-inherit lg:relative lg:after:absolute"
               >seguros</a
             >
           </li>
           <li class="group">
             <a
               href="./contato.html"
-              class="py-1 inline-block text-lg px-3 py-2 sm:px-4 sm:py-3 lg:py-4 lg:px-0 bg-botao-fundo-preto hover:bg-botao-fundo-hover duration-150 lg:after:content-[''] lg:after:block lg:after:h-0.5 lg:after:w-0 lg:after:bg-white lg:group-hover:after:w-full lg:after:duration-300 lg:bg-inherit lg:hover:bg-inherit lg:relative lg:after:absolute"
+              class="py-1 inline-block text-lg px-3 py-2 sm:px-4 sm:py-3 lg:py-4 lg:px-0 bg-cor-c1 hover:bg-cor-c10 duration-150 lg:after:content-[''] lg:after:block lg:after:h-0.5 lg:after:w-0 lg:after:bg-white lg:group-hover:after:w-full lg:after:duration-300 lg:bg-inherit lg:hover:bg-inherit lg:relative lg:after:absolute"
               >contato</a
             >
           </li>
