Introdução da home.

--- a/src/index.html
+++ b/src/index.html
@@ -51,5 +51,37 @@
         </ul>
       </div>
     </header>
+    <!-- INTRODUÇÃO -->
+    <main
+      class="bg-cor-c11 pt-10 lg:pt-0 lg:bg-black shadow-conteudoVazadoMobile sm:shadow-conteudoVazadoDesktop"
+    >
+      <div
+        class="text-white grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-10 max-w-7xl mx-auto px-5"
+      >
+        <div class="self-end lg:pb-50">
+          <h1
+            class="mb-4 lg:mb-8 text-3xl sm:text-5xl lg:text-6xl font-poppins font-semibold"
+          >
+            Bicicletas feitas sob medida<span class="text-cor-p1">.</span>
+          </h1>
+          <p class="mb-5 text-lg lg:text-2xl text-cor-c5 font-roboto">
+            Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
+            para você. Explore o mundo na sua velocidade com a Bikcraft.
+          </p>
+          <a
+            class="py-3 px-4 sm:py-4 sm:px-8 bg-gradient-to-r from-cor-botao-l1 to-cor-botao-r1 rounded text-base sm:text-lg text-cor-p5 uppercase font-bold hover:bg-gradient-to-r hover:from-cor-botao-l2 hover:to-cor-botao-r2 font-poppins font-semibold"
+            href="./bicicletas.html"
+            >Escolha a sua</a
+          >
+        </div>
+        <div>
+          <img
+            src="./img/fotos/introducao.jpg"
+            alt="bikcraft modelo preto"
+            class="h-72 w-full lg:h-full object-cover rounded"
+          />
+        </div>
+      </div>
+    </main>
   </body>
 </html>
