Seção bicicletas adicionada.

--- a/src/index.html
+++ b/src/index.html
@@ -83,5 +83,66 @@
         </div>
       </div>
     </main>
+    <article class="py-15 lg:pb-30">
+      <h2 class="font-poppins font-semibold text-6xl mb-10 max-w-7xl mx-auto">
+        Escolha a sua<span class="text-cor-p1">.</span>
+      </h2>
+
+      <ul
+        class="flex gap-5 lg:gap-10 px-5 pb-5 max-w-8xl mx-auto overflow-x-scroll"
+      >
+        <li class="flex-1 min-w-bicicleta">
+          <a href="./bicicletas/magic.html" class="group">
+            <div>
+              <img
+                class="rounded"
+                src="./img/bicicletas/magic-home.jpg"
+                alt="Bicicleta Magic Might"
+              />
+            </div>
+            <h3
+              class="text-3xl font-semibold font-poppins flex items-center before:content-[''] before:h-2 before:w-3 before:bg-cor-p1 before:inline-block before:mr-2 group-hover:before:w-6 before:duration-300"
+            >
+              Magic Might
+            </h3>
+            <p class="text-lg text-cor-c8 font-medium ml-5">R$ 2499,00</p>
+          </a>
+        </li>
+        <li class="flex-1 min-w-bicicleta">
+          <a href="./bicicletas/nimbus.html" class="group">
+            <div>
+              <img
+                class="rounded"
+                src="./img/bicicletas/nimbus-home.jpg"
+                alt="Bicicleta Nimbus Stark"
+              />
+            </div>
+            <h3
+              class="text-3xl font-semibold font-poppins flex items-center before:content-[''] before:h-2 before:w-3 before:bg-cor-p1 before:inline-block before:mr-2 group-hover:before:w-6 before:duration-300"
+            >
+              Nimbus Stark
+            </h3>
+            <p class="text-lg text-cor-c8 font-medium ml-5">R$ 4999,00</p>
+          </a>
+        </li>
+        <li class="flex-1 min-w-bicicleta">
+          <a href="./bicicletas/nebula.html" class="group">
+            <div>
+              <img
+                class="rounded"
+                src="./img/bicicletas/nebula-home.jpg"
+                alt="Bicicleta Nebula Cosmic"
+              />
+            </div>
+            <h3
+              class="text-3xl font-semibold font-poppins flex items-center before:content-[''] before:h-2 before:w-3 before:bg-cor-p1 before:inline-block before:mr-2 group-hover:before:w-6 before:duration-300"
+            >
+              Nebula Cosmic
+            </h3>
+            <p class="text-lg text-cor-c8 font-medium ml-5">R$ 3999,00</p>
+          </a>
+        </li>
+      </ul>
+    </article>
   </body>
 </html>
